src/style/scss/_base.scss
/*
Base styles for project
*/

* {
   -moz-box-sizing:    border-box;   /* Firefox 1, probably can drop this */
   -webkit-box-sizing: border-box;   /* Safari 3-4, also probably droppable */
    box-sizing:        border-box;   /* Everything else */
}


body, div, html, {
  margin: 0;
  padding: 0;
}

html {
  width: 100%;
  height: 100%;
}

body, article.assett {
  background-size: cover !important;
  background-repeat: no-repeat;
  background-position: center center fixed;
  bottom: 0;
  font-family: "Futura Today Normal", Arial,sans-serif;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.group:after {
  content: "";
  display: table;
  clear: both;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

